@@ -29,10 +29,9 @@ History:
 package com.github.lindenb.jvarkit.tools.misc;
 
 import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
-import java.io.PrintStream;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -52,79 +51,57 @@ import org.xml.sax.InputSource;
 import htsjdk.variant.variantcontext.VariantContext;
 import htsjdk.variant.variantcontext.writer.VariantContextWriter;
 import htsjdk.variant.vcf.VCFHeader;
-import htsjdk.variant.vcf.VCFHeaderLine;
 import htsjdk.variant.vcf.VCFHeaderLineCount;
 import htsjdk.variant.vcf.VCFHeaderLineType;
 import htsjdk.variant.vcf.VCFInfoHeaderLine;
 
-import com.github.lindenb.jvarkit.util.htsjdk.HtsjdkVersion;
+import com.github.lindenb.jvarkit.util.command.Command;
 import com.github.lindenb.jvarkit.util.picard.SAMSequenceDictionaryProgress;
-import com.github.lindenb.jvarkit.util.vcf.AbstractVCFFilter3;
 import com.github.lindenb.jvarkit.util.vcf.VcfIterator;
 
 
 public class VcfFilterXPath
-	extends AbstractVCFFilter3
+	extends AbstractVcfFilterXPath
 	{
-	/** the INFO tag to use in the VCF input */
-	private String infoTag=null;
-	/** user xpath expression */
-	private String xpathExpression=null;
-	/** compiled XPath expression */
-	private XPathExpression xpathExpr=null;
+	
+	private static final org.apache.commons.logging.Log LOG = org.apache.commons.logging.LogFactory.getLog(VcfFilterXPath.class);
+
+	@Override
+	public  Command createCommand() {
+			return new MyCommand();
+		}
+		 
+	public  static class MyCommand extends AbstractVcfFilterXPath.AbstractVcfFilterXPathCommand
+		{		
+
+	private XPathExpression xpathExpr = null;
 	/** namespace mapping for xpath object */
 	private final Map<String, String> prefix2uri = new HashMap<String, String>();
 	/** variable mapping for xpath object */
 	private final Map<QName,Object> xpathVariableMap = new HashMap<QName, Object>();
-	
-	public VcfFilterXPath()
-		{
-		}
-	
-	public void setInfoTag(String infoTag) {
-		this.infoTag = infoTag;
-		}
-	public void setXpathExpression(String xpathExpression) {
-		this.xpathExpression = xpathExpression;
-		}
-	
+
 	@Override
-	public String getProgramDescription() {
-		return "Filter a VCF with a XPATH expression on a INFO tag containing a base64 encodede xml document";
-		}
-	@Override
-	protected String getOnlineDocUrl() {
-		return DEFAULT_WIKI_PREFIX+"VcfFilterXPath";
-		}
-	
-	@Override
-	protected void doWork(String inpuSource,VcfIterator in, VariantContextWriter out)
-		throws IOException
-		{
-		setVariantCount(0);
+		protected Collection<Throwable> doVcfToVcf(String inpuSource,
+				VcfIterator in, VariantContextWriter out) throws IOException {
 		try {
-			//TODO in jdk8 replace with http://docs.oracle.com/javase/8/docs/api/java/util/Base64.html
-			sun.misc.BASE64Decoder base64Decoder=new sun.misc.BASE64Decoder();
+			final sun.misc.BASE64Decoder base64Decoder = new sun.misc.BASE64Decoder();
 			VCFHeader header=in.getHeader();
 			VCFInfoHeaderLine infoHeader = header.getInfoHeaderLine(this.infoTag);
 			if(infoHeader==null)
 				{
-				warning("No INFO header line for "+this.infoTag+" in "+inpuSource);
+				LOG.warn("No INFO header line for "+this.infoTag+" in "+inpuSource);
 				}
 			else if(!(infoHeader.getCountType()==VCFHeaderLineCount.INTEGER &&
 					 infoHeader.getCount()==1 &&
 					 infoHeader.getType()==VCFHeaderLineType.String))
 				{
-				warning("Bad definition of INFO header line for "+this.infoTag+" in "+inpuSource+" expected one 'string' got "+infoHeader);
+				LOG.warn("Bad definition of INFO header line for "+this.infoTag+" in "+inpuSource+" expected one 'string' got "+infoHeader);
 				infoHeader=null;
 				}
 			
 			VCFHeader h2=new VCFHeader(header);
-			h2.addMetaDataLine(new VCFHeaderLine(getClass().getSimpleName()+"CmdLine",String.valueOf(getProgramCommandLine())));
-			h2.addMetaDataLine(new VCFHeaderLine(getClass().getSimpleName()+"Version",String.valueOf(getVersion())));
-			h2.addMetaDataLine(new VCFHeaderLine(getClass().getSimpleName()+"HtsJdkVersion",HtsjdkVersion.getVersion()));
-			h2.addMetaDataLine(new VCFHeaderLine(getClass().getSimpleName()+"HtsJdkHome",HtsjdkVersion.getHome()));
-			SAMSequenceDictionaryProgress progess=new SAMSequenceDictionaryProgress(header.getSequenceDictionary());
+			addMetaData(header);
+			final SAMSequenceDictionaryProgress progess=new SAMSequenceDictionaryProgress(header.getSequenceDictionary());
 			
 			out.writeHeader(h2);
 			while(in.hasNext() )
@@ -132,7 +109,6 @@ public class VcfFilterXPath
 				VariantContext ctx = progess.watch(in.next());
 				if(infoHeader==null)//no tag in header
 					{
-					incrVariantCount();
 					out.add(ctx);
 					continue;
 					}
@@ -140,7 +116,6 @@ public class VcfFilterXPath
 				Object o=ctx.getAttribute(this.infoTag);
 				if(o==null)
 					{
-					incrVariantCount();
 					out.add(ctx);
 					continue;
 					}
@@ -155,13 +130,13 @@ public class VcfFilterXPath
 				boolean accept=(Boolean)xpathExpr.evaluate(inputSource, XPathConstants.BOOLEAN);
 				if(accept)
 					{
-					incrVariantCount();
 					out.add(ctx);
 					}
-				if(checkOutputError()) break;
+				if(out.checkError()) break;
 				}
 			
 			progess.finish();
+			return RETURN_OK;
 			}
 		catch(XPathException err)
 			{
@@ -174,36 +149,23 @@ public class VcfFilterXPath
 		}
 		
 	@Override
-	public void printOptions(PrintStream out)
-		{
-		out.println(" -T (info tag) INFO tag containing a base64-encoded XML document.");
-		out.println(" -x (xpath) XPath expression.");
-		out.println(" -o (file) filename out . Default: stdout ");
-		out.println(" -n prefix=uri (add this namespace mapping to xpath context) ");
-		super.printOptions(out);
-		}
-		
-	@Override
-	public int initializeKnime() {
+	public Collection<Throwable> initializeKnime() {
 		if(this.infoTag==null || this.infoTag.isEmpty())
 			{
-			error("Info Tag is undefined");
-			return -1;
+			return wrapException("Info Tag is undefined");
 			}
 		if(this.xpathExpression==null || this.xpathExpression.isEmpty())
 			{
-			error("XPath Expression is undefined");
-			return -1;
+			return wrapException("XPath Expression is undefined");
 			}
 		try {
 			XPathFactory xpf = XPathFactory.newInstance();
 			XPath xpath= xpf.newXPath();
-			xpath.setXPathVariableResolver(new XPathVariableResolver()
-				{
+			xpath.setXPathVariableResolver(new XPathVariableResolver() {
+				
 				@Override
-				public Object resolveVariable(QName qname)
-					{
-					return xpathVariableMap.get(qname);
+				public Object resolveVariable(QName variableName) {
+					return xpathVariableMap.get(variableName);
 					}
 				});
 			xpath.setNamespaceContext(new NamespaceContext()
@@ -244,50 +206,28 @@ public class VcfFilterXPath
 				});
 			this.xpathExpr=xpath.compile(this.xpathExpression);
 		} catch (Exception e) {
-			error(e);
-			return -1;
+			return wrapException(e);
 			}
+		
+		for(final String s: super.namespaceStrList)
+			{
+			int eq=s.indexOf('=');
+			if(eq<=0)
+				{
+				return wrapException("'=' missing in "+s);
+				}
+			this.prefix2uri.put(s.substring(0,eq),s.substring(eq+1));
+			}
+		
 		return super.initializeKnime();
 		}
 	
 	@Override
-	public int doWork(String[] args)
-		{
-		com.github.lindenb.jvarkit.util.cli.GetOpt opt=new com.github.lindenb.jvarkit.util.cli.GetOpt();
-		int c;
-		while((c=opt.getopt(args,getGetOptDefault()+ "T:x:o:n:"))!=-1)
-			{
-			switch(c)
-				{
-				case 'o': this.setOutputFile(new File(opt.getOptArg()));break;
-				case 'x': this.setXpathExpression(opt.getOptArg()); break;
-				case 'T': this.setInfoTag(opt.getOptArg()); break;
-				case 'n': 
-					{
-					String s= opt.getOptArg();
-					int eq=s.indexOf('=');
-					if(eq<=0)
-						{
-						error("'=' missing in "+s);
-						}
-					this.prefix2uri.put(s.substring(0,eq),s.substring(eq+1));
-					break;
-					}
-				default: 
-					{
-					switch(handleOtherOptions(c, opt, null))
-						{
-						case EXIT_FAILURE:return -1;
-						case EXIT_SUCCESS: return 0;
-						default:break;
-						}
-					}
-				}
+		protected Collection<Throwable> call(String inputName) throws Exception {
+			return doVcfToVcf(inputName);
 			}
-		return mainWork(opt.getOptInd(), args);
-		}
-		
-		
+
+	}
 		
 	public static void main(String[] args)
 		{
